# traceon

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  casing.html
.github/workflows/: rust.yml
benches/: async.rs  tracing.rs
examples/: Cargo.toml  btreemap.rs  builder.rs  casing.rs  compose.rs  custom.rs  deeply_nested.rs  default.rs  default_json.rs  defaults_off.rs  drop_span.rs  entered_spans.rs  event.rs  file_writer.rs  fmt.rs  instrument.rs  instrument_trait.rs  join_fields.rs  json.rs  nested.rs  nested_spans.rs  on.rs  on_thread.rs  opentelemetry.rs  opentelemetry_async.rs  opentelemetry_otlp.rs  span_format.rs  time-formats.rs  tracing_subscriber.rs  with_writer.rs
examples/custom_layer/: mod.rs
src/: formatting.rs  lib.rs  storage.rs  traceon.rs
tests/: e2e.rs
