[package]
name = "traceon"
version = "0.2.1"
authors = ["Jack Clayton <jackos@me.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/jackos/traceon"
documentation = "https://docs.rs/traceon"
readme = "README.md"
description = "An easy to use log and tracing formatter with a flattened json or pretty output."
keywords = ["logging", "metrics", "tracing", "subscriber"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[dependencies]
serde = "1"
serde_json = "1"
nu-ansi-term = "0.46"
chrono = "0.4"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["registry", "fmt", "env-filter"]

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["log", "std", "attributes"]

[dev-dependencies]
claims = "0.6.0"
once_cell = "1.4.0"
tokio = { version = "1.23.0", features = ["full"] }
criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }
opentelemetry-jaeger = "0.17.0"
opentelemetry = "0.18.0"
tracing-attributes = "0.1.23"
tracing-opentelemetry = "0.18.0"
tracing-appender = "0.2.2"

[[bench]]
name = "tracing"
harness = false

[[bench]]
name = "async"
harness = false
