[package]
name = "traceon"
version = "0.3.1"
authors = ["Jack Clayton <jackos@me.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/jackos/traceon"
documentation = "https://docs.rs/traceon"
readme = "README.md"
description = "An easy to use log and tracing formatter with a flattened json or pretty output."
keywords = ["logging", "metrics", "tracing", "subscriber"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
nu-ansi-term = "0.50"
chrono = "0.4"

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["log", "std", "attributes"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["registry", "fmt", "env-filter"]

[dev-dependencies]
claims = "0.7.1"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tracing-attributes = "0.1.27"
tracing-opentelemetry = "0.23.0"
tracing-appender = "0.2.3"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry = "0.22.0"
opentelemetry_sdk = "0.22.1"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[[bench]]
name = "tracing"
harness = false

[[bench]]
name = "async"
harness = false
